# HexCom

./: .gitignore  CMakeLists.txt  README.md
apps/example/: CMakeLists.txt  hexworld_clientcli.cpp
include/hexworld/: hex_client.h  hex_client_impl.h  hex_com_state.h  hex_lib.h
lib/: CMakeLists.txt  hex_client.cpp  hex_client_impl.cpp  hex_client_impl.h
lib/protos/: hexagon.proto  hexagon_world.proto
